# Generated by Django 5.1.6 on 2026-05-31 09:50

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('access', '0012_authsession'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Department',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(max_length=128)),
                ('status', models.PositiveSmallIntegerField(choices=[(0, 'disabled'), (1, 'active')], default=1)),
                ('path', models.CharField(blank=True, db_index=True, max_length=500)),
                ('depth', models.PositiveIntegerField(default=0)),
                ('created_by_user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_v2_departments', to=settings.AUTH_USER_MODEL)),
                ('parent', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='children', to='iam_v2.department')),
                ('tenant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='v2_departments', to='access.tenant')),
            ],
            options={
                'db_table': 'v2_departments',
                'ordering': ['path', 'id'],
            },
        ),
        migrations.CreateModel(
            name='ResourceShareGroup',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(max_length=128)),
                ('status', models.PositiveSmallIntegerField(choices=[(0, 'disabled'), (1, 'active')], default=1)),
                ('owner_department', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='owned_share_groups', to='iam_v2.department')),
            ],
            options={
                'db_table': 'v2_resource_share_groups',
                'ordering': ['-id'],
            },
        ),
        migrations.CreateModel(
            name='ResourceShareGroupTargetDepartment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('department', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='targeted_share_groups', to='iam_v2.department')),
                ('share_group', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='target_departments', to='iam_v2.resourcesharegroup')),
            ],
            options={
                'db_table': 'v2_resource_share_group_targets',
                'ordering': ['id'],
            },
        ),
        migrations.CreateModel(
            name='V2AccountProfile',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('status', models.PositiveSmallIntegerField(choices=[(0, 'disabled'), (1, 'active')], default=1)),
                ('department', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='account_profiles', to='iam_v2.department')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='v2_account_profile', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'v2_account_profiles',
                'ordering': ['id'],
            },
        ),
        migrations.CreateModel(
            name='V2AccountRoleAssignment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('role_code', models.CharField(choices=[('platform_super_admin', '平台超级管理员'), ('department_admin', '部门管理员'), ('task_monitor_dispatcher', '任务监控调度员'), ('pilot', '飞手'), ('work_order_handler', '工单处理员')], max_length=64)),
                ('account_profile', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='role_assignments', to='iam_v2.v2accountprofile')),
                ('assigned_by_user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_v2_roles', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'v2_account_role_assignments',
                'ordering': ['id'],
            },
        ),
        migrations.AddIndex(
            model_name='department',
            index=models.Index(fields=['tenant', 'path'], name='idx_v2_dept_tenant_path'),
        ),
        migrations.AddConstraint(
            model_name='department',
            constraint=models.UniqueConstraint(condition=models.Q(('parent__isnull', True)), fields=('tenant',), name='uniq_v2_department_tenant_root'),
        ),
        migrations.AddConstraint(
            model_name='department',
            constraint=models.UniqueConstraint(fields=('tenant', 'parent', 'name'), name='uniq_v2_department_sibling_name'),
        ),
        migrations.AddConstraint(
            model_name='resourcesharegroup',
            constraint=models.UniqueConstraint(fields=('owner_department', 'name'), name='uniq_v2_share_group_owner_name'),
        ),
        migrations.AddConstraint(
            model_name='resourcesharegrouptargetdepartment',
            constraint=models.UniqueConstraint(fields=('share_group', 'department'), name='uniq_v2_share_group_target_department'),
        ),
        migrations.AddConstraint(
            model_name='v2accountroleassignment',
            constraint=models.UniqueConstraint(fields=('account_profile', 'role_code'), name='uniq_v2_account_role'),
        ),
    ]
